--- a/package.json
+++ b/package.json
@@ -2,28 +2,26 @@
   "name": "breedingo-razorpay-backend",
   "version": "1.0.0",
   "description": "Backend server for Breedingo Razorpay integration",
-  "main": "src/server.ts",
+  "main": "api/index.ts",
   "engines": {
     "node": ">=14.0.0"
   },
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "dev": "nodemon src/server.ts",
-    "build": "tsc",
-    "vercel-build": "echo 'Build not required'"
+    "dev": "vercel dev",
+    "deploy": "vercel deploy --prod"
   },
   "dependencies": {
+    "@vercel/node": "^3.0.0",
     "express": "^4.18.2",
     "dotenv": "^16.3.1",
     "razorpay": "^2.9.2",
     "cors": "^2.8.5",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
-    "nodemon": "^3.0.2"
+    "vercel": "^32.0.0"
   }
 }
