--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "target": "es2017",
+    "lib": ["es2017"],
     "module": "commonjs",
     "outDir": "./dist",
     "rootDir": "./src",
@@ -13,8 +14,10 @@
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*"]
-    }
+    },
+    "isolatedModules": true,
+    "incremental": true
   },
-  "include": ["src/**/*"],
+  "include": ["api/**/*"],
   "exclude": ["node_modules", "dist"]
 }
