--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,15 @@
             "src": "api/**/*.ts",
             "use": "@vercel/node"
         }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/api/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/api/index.ts"
+        }
     ]
 }
