--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,14 @@
     "target": "es2017",
     "lib": ["es2017"],
     "module": "commonjs",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
+    "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*"]
-    },
     "isolatedModules": true,
-    "incremental": true
+    "resolveJsonModule": true
   },
   "include": ["api/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules"]
 }
